--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ node_js:
 before_script:
   - npm i api2html -g
 script:
-  - api2html -o test.html swagger.yaml
+  - api2html -o test.html docs/swagger.yaml
