--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ deploy:
 #  - test.html
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep-history: true
-#  target-branch: test-branch
+#  target-branch: gh-pages
   on:
     branch: master
