--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 before_script:
   - npm i api2html -g
 script:
-  - api2html -o docs/shins.html -c "images/Vipps Logo@3x.png" docs/swagger.yaml
+  - api2html -o docs/shins.html -b -s -c "images/Vipps Logo@3x.png" docs/swagger.yaml
 deploy:
   provider: pages
   skip-cleanup: true
