--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,6 @@ on:
 jobs:
   action-filter:
     runs-on: ubuntu-18.04
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x]
     steps:
     - uses: actions/checkout@master
     - name: files-filter
@@ -23,7 +20,7 @@ jobs:
       with:
         args: .*\\.yaml$
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js ${{ 12.x }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
