--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
       with:
         args: .*\\.yaml$
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ 12.x }}
+    - name: Use Node.js 12.x
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 12.x
     - run: npm install widdershins -g
     - run: widdershins --help
       env:
