--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,10 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@master
-    - name: files-filter
-      uses: wcchristian/gh-pattern-filter-action@master
-      with:
-        args: .*\\.yaml$
+ #   - name: files-filter
+ #     uses: wcchristian/gh-pattern-filter-action@master
+ #     with:
+#        args: .*\\.yaml$
     - uses: actions/checkout@v2
     - name: Use Node.js 12.x
       uses: actions/setup-node@v1
