--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,9 @@ jobs:
         node-version: 12.x
     - run: npm install widdershins -g
     - run: ls -R
-    - run: widdershins --help
+    - run: widdershins docs/swagger.yaml -o docs/index.html.md
+    - run: ls -R
+    - run: cat docs/index.html.md
       env:
         CI: true
 #    - name: Deploy to GitHub Pages
