--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
     - run: npm install shins
     - run: widdershins docs/swagger.yaml -o docs/index.html.md
     - run: ls -R
-    - run: cat docs/index.html.md
+    - run: which shins
       env:
         CI: true
 #    - name: Deploy to GitHub Pages
