--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,7 @@ jobs:
         git branch -a
         git add ./docs
         git commit -m "fun"
+        git clean -f
         git push
       env:
         CI: true
