--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,33 +30,31 @@ jobs:
       with:
         path: vendor/bundle
         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-    - name: widdershins
+    - name: Install and run Widdershins
       run: |
         npm install widdershins -g
         widdershins docs/swagger.yaml -o docs/widdershins.html.md --expandBody
-    - name: slate install
+    - name: Install Slate
       run: |
         gem install bundler:2.0.2
         bundle config path vendor/bundle
-        git init ./slate
-        cd ./slate
-        git pull https://github.com/slatedocs/slate
-        cp ../docs/widdershins.html.md ./source/index.html.md
+        git init ../slate
+        git -C ../slate pull https://github.com/slatedocs/slate ../slate
+        cp ./docs/widdershins.html.md ../slate/source/index.html.md
         bundle install
-    - name: slate build
+    - name: Build Slate
       run: |
-        cd ./slate
+        cd ../slate
         bundle exec middleman build --clean
-        cp -r build ../docs
-    - name: git push
+    - name: Push new build
       run: |
+        cp -R ../slate/build ./docs/
         git config --local user.email "actions@example.com"
         git config --local user.name "github actions"
         git remote -v
         git branch -a
         git add ./docs
         git commit -m "fun"
-        git clean -f
         git push
       env:
         CI: true
