--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Install and run Widdershins
       run: |
         npm install widdershins -g
-        widdershins docs/swagger.yaml -o docs/widdershins.html.md --expandBody --raw
+        widdershins docs/swagger.yaml -o docs/widdershins.html.md
     - name: Install Slate
       run: |
         git init ../slate
