--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
     - name: Install and run Widdershins
       run: |
         npm install widdershins -g
-        widdershins docs/swagger.yaml -o docs/index.html.md
+        widdershins ./docs/swagger.yaml -o docs/index.html.md
     - name: Install Slate
       run: |
         git init ../slate
@@ -47,7 +47,7 @@ jobs:
         bundle install
     - name: Python find replace
       run: |
-        cd .docs/
+        cd ./docs/
         python find_replace.py
     - name: Build Slate
       run: |
