--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,9 @@ jobs:
         widdershins ./docs/swagger.yaml -o docs/index.html.md --expandBody
     - name: Clone openapi2slate
       run: |
-        git pull https://github.com/vpsataccentor/openapi2slate ../o2s
+        git init ../o2s
+        cd ../o2s
+        git pull https://github.com/vpsataccentor/openapi2slate
 # remember to change find_replace to take in path
     - name: Python find replace
       run: |
