--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
       run: |
         cp ./docs/index.html.md ../slate/source/index.html.md
         cp ../o2s/logo.png ../slate/source/images/logo.png
-        cp ../o2s/stylesheets ../slate/source/stylesheets
+        cp -r ../o2s/stylesheets ../slate/source/stylesheets
         cd ../slate
         ls ./source/stylesheets
         bundle exec middleman build --clean
