--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,13 +53,13 @@ jobs:
       run: |
         cp ./docs/index.html.md ../slate/source/index.html.md
         cp ../o2s/logo.png ../slate/source/images/logo.png
-        cp -r ../o2s/stylesheets ../slate/source/stylesheets
+        cp -r ../o2s/stylesheets/. ../slate/source/stylesheets
         cd ../slate
         ls ./source/stylesheets
         bundle exec middleman build --clean
     - name: Push new build
       run: |
-        cp -r ../slate/build ./docs/slate
+        cp -r ../slate/build/. ./docs/slate
         git config --local user.email "actions@example.com"
         git config --local user.name "github actions"
         git add ./docs/slate
