--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,15 @@ on:
   push:
     branches: [ master ]
     paths: 
-    - '.github/**' 
+    - '.github/workflows/slate.yml' 
     - 'docs/swagger.yaml'
+    - 'docs/openapi.yaml'
   pull_request:
     branches: [ master ]
     paths: 
-    - '.github/**' 
+    - '.github/workflows/slate.yml' 
     - 'docs/swagger.yaml'
+    - 'docs/openapi.yaml'
 
 jobs:
   action-filter:
