--- a/.github/workflows/slate.yml
+++ b/.github/workflows/slate.yml
@@ -15,7 +15,10 @@ on:
     - 'docs/openapi.yaml'
 
 jobs:
-  action-filter:
+  slate-builder:
+    env:
+        openapi_path: ./docs/swagger.yaml
+        slate_output_path: ./docs/slate
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@master
@@ -38,7 +41,7 @@ jobs:
     - name: Install and run Widdershins
       run: |
         npm install widdershins -g
-        widdershins ./docs/swagger.yaml -o ./docs/index.html.md --expandBody --user_templates ../o2s/openapi3 --summary
+        widdershins $openapi_path -o ./docs/index.html.md --expandBody --user_templates ../o2s/openapi3 --summary
     - name: Install Slate
       run: |
         git init ../slate
@@ -50,17 +53,16 @@ jobs:
     - name: Build Slate
       run: |
         cp ./docs/index.html.md ../slate/source/index.html.md
-        cp ../o2s/logo.png ../slate/source/images/logo.png
+        cp ../o2s/other/logo.png ../slate/source/images/logo.png
         cp -r ../o2s/stylesheets/. ../slate/source/stylesheets
         cd ../slate
-        ls ./source/stylesheets
         bundle exec middleman build --clean
     - name: Push new build
       run: |
-        cp -r ../slate/build/. ./docs/slate
+        cp -r ../slate/build/. $slate_output_path
         git config --local user.email "actions@example.com"
         git config --local user.name "github actions"
-        git add ./docs/slate
+        git add $slate_output_path
         git commit -m "Slate update"
         git push
       env:
