--- a/.github/workflows/slate.yml
+++ b/.github/workflows/slate.yml
@@ -38,7 +38,7 @@ jobs:
 #      run: |
 #        git init $slate_resources_path
 #        cd $slate_resources_path
-#        git pull ___
+#        git pull ____
     - name: Install and run Widdershins
       run: |
         npm install widdershins -g
